welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:8: error: only classes can have declared but undefined members
def mov()
    ^