welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {

baisseBrosse()

var x = getMondeHauteur()

def mov()
	for (i <- 0 to x-1)
	{avance()}






}
